--- a/群峦小技.md
+++ b/群峦小技.md
@@ -1,1 +1,137 @@
+本文仅为一些游戏中的注意事项和小技巧，不包含具体合成与基础交互。
 
+小标题是对该项内容的概括。如果看标题就能猜出我要讲的内容，可以跳过该项。
+
+<!-- vim-markdown-toc GFM -->
+
+* [第一天](#第一天)
+    * [跑图中需要注意的资源](#跑图中需要注意的资源)
+        * [粘土与降水量](#粘土与降水量)
+        * [矿粒坐标与关键矿物](#矿粒坐标与关键矿物)
+        * [营养类](#营养类)
+    * [食物](#食物)
+        * [海带应急](#海带应急)
+        * [制作三明治](#制作三明治)
+        * [清除食物变质](#清除食物变质)
+    * [陶器](#陶器)
+        * [使用花瓶存放物品](#使用花瓶存放物品)
+        * [跳过铜工具直接铜合金](#跳过铜工具直接铜合金)
+        * [负数烧陶时间](#负数烧陶时间)
+    * [夜晚的怪物](#夜晚的怪物)
+        * [甩开](#甩开)
+        * [武器克制](#武器克制)
+        * [茅草躲避](#茅草躲避)
+* [采矿](#采矿)
+    * [勘探](#勘探)
+        * [十字探矿法](#十字探矿法)
+        * [在十字基础上迭代](#在十字基础上迭代)
+        * [十字向下挖没有发现矿](#十字向下挖没有发现矿)
+        * [很接近矿却“没发现什么特别的”](#很接近矿却没发现什么特别的)
+    * [防塌方](#防塌方)
+        * [支柱范围](#支柱范围)
+        * [竖向横向拓展横梁](#竖向横向拓展横梁)
+        * [支柱底铺木板](#支柱底铺木板)
+* [打铁](#打铁)
+
+<!-- vim-markdown-toc -->
+### 第一天
+石器时代，以获取足够粘土、铜矿粒为主要目的。
+#### 跑图中需要注意的资源
+*以下只描述关键的资源，不意味着其他资源不关键*
+##### 粘土与降水量
+[![2d08d11073423821deac5a33659a4505.md.png](https://www.z4a.net/images/2021/04/01/2d08d11073423821deac5a33659a4505.md.png)](https://www.z4a.net/image/gm6lXJ)
+
+首先是粘土，秋麒麟下就有。要求**降水量至少500**生成，一般而言降水量随着z坐标的绝对值增大而减小，直到z坐标到达±10000。之后请参照[陶器部分](#陶器)
+##### 矿粒坐标与关键矿物
+[![9a384b25db609d114cdf78765f23220b.png](https://www.z4a.net/images/2021/04/01/9a384b25db609d114cdf78765f23220b.png)](https://www.z4a.net/image/gm7UJT)
+
+矿粒下方有对应的矿物，注意标记坐标。尤其是**硅镍、石墨、高岭土**三种关键而又不常见的矿物。比较常见的就是铁、铜和后述用于合金的矿物
+##### 营养类
+产生水果的果树、灌木，产生乳制品的牛（没有牛肉为什么不吃大豆？）。
+再其次就是大豆与大麻。
+#### 食物
+##### 海带应急
+[![38317062874af39d6ecf161e8cb13522.png](https://www.z4a.net/images/2021/04/01/38317062874af39d6ecf161e8cb13522.png)](https://www.z4a.net/image/gmTvHp)
+
+如果真的到了山穷水尽的时候，可以到附近的沿海，用小刀右键海带食用。
+##### 制作三明治
+[![6e64be3ddf8dfc7d5d35514bf4799f6d.md.png](https://www.z4a.net/images/2021/04/01/6e64be3ddf8dfc7d5d35514bf4799f6d.md.png)](https://www.z4a.net/image/gmT3si)
+
+如果你身上有任何一种面包的话，可以用小刀右键石头，产生厨台。
+
+[![2e27258f8635de962.png](https://www.z4a.net/images/2021/04/01/2e27258f8635de962.png)](https://www.z4a.net/image/gmTfbE)
+
+制作三明治除面包外需要两种食物（第三种食物也可以是面包），上面的数字意味着对应食材的消耗量。
+##### 清除食物变质
+用小刀可以清除食物的变质部分，从而减缓变质（未变质的食物会变为等分为两份）
+
+#### 陶器
+花瓶、水瓶以及各种模具
+##### 使用花瓶存放物品
+[![89129a632126faf162878b7c3b4ca528.png](https://www.z4a.net/images/2021/04/01/89129a632126faf162878b7c3b4ca528.png)](https://www.z4a.net/image/gmTS1f)
+
+能够存放四组物品，能比中等小的物品（例如80oz以下的食物）。喜欢身上放一堆东西的可以多做几个
+##### 跳过铜工具直接铜合金
+众所周知，花瓶可以用来融化矿粒和矿物以制作工具。为了下矿，我们保守需要矿镐、锯子与探矿镐，共计300单位的金属。
+*如果你发现了地表铜，可以省去探矿镐的100单位*
+
+如果你有足够的【锌、铋】、【金、银】、【锡】，可以直接用花瓶制作对应的铜合金，来制作青铜etc工具，以此提高工具耐久和减少铜粒需求。
+##### 负数烧陶时间
+当陶器接近烧完时不建议距离过远，**尤其是传送到其他地方**。目前除重烧外不知晓解决办法
+#### 夜晚的怪物
+##### 甩开
+除了蜘蛛外，怪物的速度并不快，奔跑甩开就行。不过晚上需要小心地上的深坑
+##### 武器克制
+考虑到群峦的血量，空手撸死怪物并不现实。分别使用斧子对抗僵尸、锤子对抗骷髅以获得加成。
+
+*但不建议石器时期对抗骷髅，骷髅的血量往往超过石锤耐久*
+##### 茅草躲避
+[![4d37d55ad11521eb62ed840710c2471d.md.png](https://www.z4a.net/images/2021/04/01/4d37d55ad11521eb62ed840710c2471d.md.png)](https://www.z4a.net/image/gmTGaA)
+
+用干草合成两个茅草，然后钻进去就好，树叶也能产生同样的效果。还可以偶尔出来烧烧陶器，热热食物之类的。
+
+**如果僵尸过于靠近，建议砍死，因为接触就会造成伤害**
+
+### 采矿
+勘探镐用来探矿
+#### 勘探
+探矿镐的范围是以勘探点为中心的25×25×25
+##### 十字探矿法
+先沿x轴找一条直线上变为最大量的两个坐标，然后取中值。以该中值为x值，沿z轴找同样的两个坐标，取中值。得出向下挖的(x、z)坐标
+
+*此处x、z顺序可以颠倒*
+
+例如在4033，12930发现中量辉铋矿。在-12900沿着x轴走，发现最大只能看见中等量，在（4027，12930),(4036,12930)矿物从中等变为低。取中间x值为4032。
+
+然后在4032沿z轴走。最大能看见巨量（也就是探测显示的最高值），在（4032，12925），（4032，12902）坐标矿物从巨量变为大量。取半，可得z值为12914。
+
+即从(4032,12914)向下挖能找到矿。
+
+##### 在十字基础上迭代
+根据十字得出的坐标，再十字一次进行修正。
+
+如上例，再根据新z值12914，重新找x轴上变最大的两个坐标（4041，12914）（4019，12914）取中值4030。直接从(4030,12914)向下挖也可以再修正一次z值。
+
+这样能够略微提高向下挖的精度，不管怎么说总比挖到地下发现要往旁边挖才能有矿好点
+##### 十字向下挖没有发现矿
+向下挖时候需要注意不时用勘探，如果发现矿量降低，说明偏离了矿点。建议从大量变巨量（或勘探到的最大量向下）的y坐标向下8格的位置开始，重复上面的十字探矿直到看见矿。
+
+##### 很接近矿却“没发现什么特别的”
+巨量边上的格子却提示“没发现什么特别的”，当玩家勘探等级较低时，会出现这种情况。当你确定这个范围一定有矿时，往相邻的格子锤一下就好。
+
+*如果是从矿粒标记的坐标，也有可能超出了勘探范围。走远一点或者下挖勘探*
+#### 防塌方
+##### 支柱范围
+[![61553c7a9dec05a3ae207e1309580936.md.png](https://www.z4a.net/images/2021/04/01/61553c7a9dec05a3ae207e1309580936.md.png)](https://www.z4a.net/image/gmV5fh)
+[![22053744e78e18b18.md.png](https://www.z4a.net/images/2021/04/01/22053744e78e18b18.md.png)](https://www.z4a.net/image/gmVDt5)
+
+支柱的范围是以横梁为中心，能够防止高度为三、横纵9x9的坍塌。*实际自己拿泥土摆下就能清楚*
+##### 竖向横向拓展横梁
+[![93e98950979551ba3ebc71cedda2b561.md.png](https://www.z4a.net/images/2021/04/01/93e98950979551ba3ebc71cedda2b561.md.png)](https://www.z4a.net/image/gmVFq2)
+
+这样左右、上下拉开的横梁也是有效的，范围见上。
+##### 支柱底铺木板
+[![245000c89c692963ef3e3cd59a6c850e.md.png](https://www.z4a.net/images/2021/04/01/245000c89c692963ef3e3cd59a6c850e.md.png)](https://www.z4a.net/image/gmVRmG)
+
+可以在支柱下铺木板之类的不受重力影响方块，好处在于下方有矿的时候挖掘不会破坏支柱
+### 打铁
