--- a/群峦小技.md
+++ b/群峦小技.md
@@ -1,4 +1,4 @@
-本文仅为一些游戏中的注意事项和小技巧，不包含具体合成与基础交互。
+本文仅为一些游戏中的注意事项和小技巧，具体合成与基础交互请参考[群峦救援wiki-整合包详解](https://wiki.teammoeg.com/index.php?title=%E7%BE%A4%E5%B3%A6%E6%95%91%E6%8F%B4%E6%95%B4%E5%90%88%E5%8C%85%E8%AF%A6%E8%A7%A3#Tier_0.E7.9F.B3.E5.99.A8.E3.80.81.E9.99.B6.E7.93.B7.E4.B8.8E.E9.9D.92.E9.93.9C)
 
 小标题是对该项内容的概括。如果看标题就能猜出我要讲的内容，可以跳过该项。
 
@@ -93,7 +93,7 @@
 **如果僵尸过于靠近，建议砍死，因为接触就会造成伤害**
 
 ### 采矿
-勘探镐用来探矿
+勘探镐用来探矿，矿镐采矿，锯子用来制作支柱防止坍塌
 #### 勘探
 探矿镐的范围是以勘探点为中心的25×25×25
 ##### 十字探矿法
@@ -129,7 +129,7 @@
 ##### 竖向横向拓展横梁
 [![93e98950979551ba3ebc71cedda2b561.md.png](https://www.z4a.net/images/2021/04/01/93e98950979551ba3ebc71cedda2b561.md.png)](https://www.z4a.net/image/gmVFq2)
 
-这样左右、上下拉开的横梁也是有效的，范围见上。
+这样左右、上下拉开的横梁也是有效的。
 ##### 支柱底铺木板
 [![245000c89c692963ef3e3cd59a6c850e.md.png](https://www.z4a.net/images/2021/04/01/245000c89c692963ef3e3cd59a6c850e.md.png)](https://www.z4a.net/image/gmVRmG)
 
